--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "description": "javascript library for game programming.",
   "homepage": "http://tmlife.io",
-  "main": ["build/phina.js", "build/phina.min.js"],
+  "main": [
+    "build/phina.js",
+    "build/phina.min.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:phi-jp/phina.js.git"
@@ -27,5 +30,8 @@
     "angular": "~1.4.1",
     "angular-material": "~0.10.0",
     "angular-messages": "~1.4.1"
+  },
+  "dependencies": {
+    "materialize": "~0.97.0"
   }
 }
