--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
     "gulp-helper": "^1.0.3",
+    "gulp-jade": "^1.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.2",
+    "gulp-shell": "^0.4.2",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3"
   }
