--- a/src/config.json
+++ b/src/config.json
@@ -8,11 +8,14 @@
 
     "event/eventdispatcher.js",
 
+    "app/updater.js",
+    "app/baseapp.js",
     "app/element.js",
     "app/object2d.js",
     "app/scene.js",
 
     "display/canvasapp.js",
+    "display/canvaselement.js",
     "display/canvasscene.js",
     "display/canvaslayer.js"
   ]
