--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-replace": "^0.5.2",
     "gulp-shell": "^0.4.2",
     "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.3"
+    "gulp-util": "^3.0.3",
+    "gulp-webserver": "^0.9.1"
   }
 }
