--- a/src/config.json
+++ b/src/config.json
@@ -24,6 +24,7 @@
 
     "display/canvaselement.js",
     "display/shape.js",
+    "display/sprite.js",
     "display/canvasscene.js",
     "display/canvaslayer.js",
     "display/canvasrenderer.js",
