--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-shell": "^0.4.2",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "ip": "^0.3.3"
   }
 }
