--- a/src/config.json
+++ b/src/config.json
@@ -23,6 +23,7 @@
     "asset/assetmanager.js",
     "asset/assetloader.js",
     "asset/texture.js",
+    "asset/sound.js",
 
     "input/input.js",
     "input/mouse.js",
