fix result scene

--- a/src/config.json
+++ b/src/config.json
@@ -65,6 +65,7 @@
 
     "game/managerscene.js",
     "game/titlescene.js",
+    "game/resultscene.js",
     "game/gameapp.js",
     "game/pietimer.js",
 
