--- a/src/config.json
+++ b/src/config.json
@@ -11,6 +11,7 @@
     
     "geom/vector2.js",
     "geom/matrix33.js",
+    "geom/rect.js",
 
     "util/eventdispatcher.js",
     "util/tween.js",
