--- a/src/config.json
+++ b/src/config.json
@@ -12,6 +12,7 @@
     "geom/vector2.js",
     "geom/matrix33.js",
     "geom/rect.js",
+    "geom/circle.js",
 
     "util/eventdispatcher.js",
     "util/tween.js",
