fix canvas recorder

--- a/src/config.json
+++ b/src/config.json
@@ -49,6 +49,7 @@
     "dom/event.js",
 
     "graphics/canvas.js",
+    "graphics/canvasrecorder.js",
 
     "display/canvaselement.js",
     "display/shape.js",
