--- a/src/config.json
+++ b/src/config.json
@@ -67,6 +67,7 @@
     "ui/button.js",
 
     "game/managerscene.js",
+    "game/splashscene.js",
     "game/titlescene.js",
     "game/resultscene.js",
     "game/countscene.js",
