config.json add afterimagelayer.js

--- a/src/config.json
+++ b/src/config.json
@@ -60,6 +60,7 @@
     "display/canvasrenderer.js",
     "display/domapp.js",
     "display/canvasapp.js",
+    "display/afterimagelayer.js",
 
 
     "effect/wave.js",
