--- a/src/config.json
+++ b/src/config.json
@@ -34,6 +34,7 @@
     "input/input.js",
     "input/mouse.js",
     "input/touch.js",
+    "input/gamepad.js",
 
     "app/updater.js",
     "app/interactive.js",
