--- a/src/config.json
+++ b/src/config.json
@@ -20,6 +20,7 @@
     "util/grid.js",
     "util/changedispatcher.js",
     "util/flow.js",
+    "util/color.js",
 
     "asset/asset.js",
     "asset/assetmanager.js",
@@ -51,7 +52,6 @@
 
     "graphics/canvas.js",
     "graphics/canvasrecorder.js",
-    "graphics/color.js",
 
     "display/canvaselement.js",
     "display/shape.js",
