--- a/src/config.json
+++ b/src/config.json
@@ -69,6 +69,7 @@
     "effect/wave.js",
 
     "ui/button.js",
+    "ui/gauge.js",
 
     "game/managerscene.js",
     "game/splashscene.js",
@@ -78,7 +79,6 @@
     "game/countscene.js",
     "game/gameapp.js",
     "game/pietimer.js",
-    "game/gauge.js",
 
     "social/twitter.js",
 
