fix query string

--- a/src/config.json
+++ b/src/config.json
@@ -24,6 +24,7 @@
     "util/flow.js",
     "util/color.js",
     "util/random.js",
+    "util/querystring.js",
 
     "asset/asset.js",
     "asset/assetmanager.js",
