--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
     "gulp-webserver": "^0.9.1",
-    "ip": "^0.3.3"
+    "ip": "^0.3.3",
+    "require-dir": "^0.3.1"
   }
 }
